Fixing a contrast issue in source highlighting

--- a/_scss/_syntax-github-dark.scss
+++ b/_scss/_syntax-github-dark.scss
@@ -35,7 +35,7 @@
 .highlight .nf { color: lighten(#aa2222, 15%); font-weight: bold } /* Name.Function */
 .highlight .nl { color: lighten(#aa2222, 15%); font-weight: bold } /* Name.Label */
 .highlight .nn { color: #aaaaaa } /* Name.Namespace */
-.highlight .nt { color: #000080 } /* Name.Tag */
+.highlight .nt { color: #6eb7ff } /* Name.Tag */
 .highlight .nv { color: lighten(#008080, 15%) } /* Name.Variable */
 .highlight .ow { color: #ffffff; font-weight: bold } /* Operator.Word */
 .highlight .w { color: #bbbbbb } /* Text.Whitespace */
